using System;

namespace Liskov_Substitution_Solution;

public interface IShape
{
    int GetArea();
}
